<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/userName"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/inUser"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:background="@color/colorAccent"
        android:backgroundTintMode="src_in"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/emailUser"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inUser"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inEmail"
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:layout_marginStart="36dp"
        android:background="@color/colorAccent"
        android:textSize="30sp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/butOk"
        style="@style/Animation.Design.BottomSheetDialog"
        android:layout_width="339dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="32dp"
        android:bottomLeftRadius="100dp"
        android:bottomRightRadius="100dp"
        android:text="@string/ok"
        android:textSize="30sp"
        android:topLeftRadius="100dp"
        android:topRightRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inEmail" />

    <Button
        android:id="@+id/butClr"
        style="@android:style/Widget.Button"
        android:layout_width="339dp"
        android:background="@drawable/buttonshape"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/clear"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butOk" />

    <TextView
        android:id="@+id/result"
        android:layout_width="348dp"
        android:layout_height="151dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/butClr" />

</androidx.constraintlayout.widget.ConstraintLayout>